--- a/DockerFile
+++ b/DockerFile
@@ -18,4 +18,4 @@ ENV PYTHONUNBUFFERED=1
 EXPOSE 8501
 
 # Run the Streamlit app
-CMD ["streamlit", "run", "admin_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["streamlit", "run", "Admin_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
