--- a/.github/workflows/hf-deploy.yml
+++ b/.github/workflows/hf-deploy.yml
@@ -1,11 +1,13 @@
 name: Sync to Hugging Face Spaces
+
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
-  sync-to-hub:
+  sync-to-hf:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -18,6 +20,6 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          # add HF remote with token to authenticate non-interactively:
-          git remote add space https://Fahmiyacm:$HF_TOKEN@huggingface.co/spaces/Fahmiyacm/shawarma-admin HEAD:main
+          # Correct remote-add and push with your actual HF Space path:
+          git remote add space https://Fahmiyacm:${HF_TOKEN}@huggingface.co/spaces/Fahmiyacm/shawarma-admin
           git push --force space main
