--- a/.github/workflows/hf-deploy.yml
+++ b/.github/workflows/hf-deploy.yml
@@ -1,25 +1,14 @@
-name: Sync to Hugging Face Spaces
+- name: Push to Hugging Face Space
+  env:
+    HF_TOKEN: ${{ secrets.HF_TOKEN }}
+  run: |
+    git config --global user.email "actions@github.com"
+    git config --global user.name "GitHub Actions"
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+    # Create a temporary branch for HF without screenshots
+    git checkout -b hf-deploy
+    git rm -r --cached screenshots/
+    git commit -m "Remove screenshots for Hugging Face deployment" || echo "No changes to commit"
 
-jobs:
-  sync-to-hf:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          lfs: true
-      - name: Push to Hugging Face Space
-        env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          # Correct remote-add and push with your actual HF Space path:
-          git remote add space https://Fahmiyacm:${HF_TOKEN}@huggingface.co/spaces/Fahmiyacm/shawarma-admin
-          git push --force space main
+    git remote add space https://Fahmiyacm:${HF_TOKEN}@huggingface.co/spaces/Fahmiyacm/shawarma-admin
+    git push --force space hf-deploy:main
