--- a/.github/workflows/hf-deploy.yml
+++ b/.github/workflows/hf-deploy.yml
@@ -20,8 +20,8 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "fahmiyacm@gmail.com"
+          git config --global user.name "Fahmiyacm"
 
           # Create a new branch from main for deployment
           git checkout -b hf-deploy
