--- a/.github/workflows/hf-deploy.yml
+++ b/.github/workflows/hf-deploy.yml
@@ -9,29 +9,72 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          lfs: true
+          lfs: true  # Pull LFS files if any
 
-      - name: Push to Hugging Face Space (clean deploy without screenshots)
-        env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+      - name: Install Git LFS
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y git-lfs
+          git lfs install
+
+      - name: Set up Git user
         run: |
           git config --global user.email "fahmiyacm@gmail.com"
           git config --global user.name "Fahmiyacm"
 
-          # Create a new branch from main for deployment
-          git checkout -b hf-deploy
+      # Optional: track your large binaries with LFS if needed
+      #- name: Track binary files with LFS
+      #  run: |
+      #    git lfs track "some/binary/files"
+      #    git add .gitattributes
+      #    git commit -m "Track binary files with Git LFS" || echo "No changes to commit"
 
-          # Remove screenshots only from Git tracking (not deleting local files)
-          git rm -r --cached Screenshots/
-          git commit -m "Remove screenshots for HF deploy" || echo "No changes to commit"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-          # Add Hugging Face remote
-          git remote add space https://Fahmiyacm:${HF_TOKEN}@huggingface.co/spaces/Fahmiyacm/shawarma-admin-app
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-          # Push this cleaned branch to HF main
-          git push --force space hf-deploy:main
+      - name: Debug File Presence
+        run: |
+          ls -lR .
+          git lfs ls-files || echo "No LFS files"
+
+      - name: Verify HF_TOKEN
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          if [ -z "$HF_TOKEN" ]; then
+            echo "Error: HF_TOKEN is not set or empty"
+            exit 1
+          else
+            echo "HF_TOKEN is set"
+          fi
+
+      - name: Clone Hugging Face Space repo
+        run: |
+          git clone https://huggingface.co/spaces/Fahmiyacm/shawarma-admin-app hf_space
+
+      - name: Sync Files (excluding .git & Screenshots)
+        run: |
+          rsync -av --exclude=.git --exclude=hf_space --exclude=Screenshots ./ hf_space/
+
+      - name: Commit & Push to Hugging Face
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          cd hf_space
+          git lfs install || echo "git-lfs not available or no files tracked"
+          git add .
+          git commit -m "Auto deploy from GitHub" || echo "No changes to commit"
+          git push https://Fahmiyacm:$HF_TOKEN@huggingface.co/spaces/Fahmiyacm/shawarma-admin-app HEAD:main
